--- a/index.html
+++ b/index.html
@@ -123,9 +123,24 @@
 
         <a class="btn-link">Documentation</a>
     </div>
+
+
+
+    
+</div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: orangered">100%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:100%; background: rgb(255, 72, 0);"></div>
 </div>
 
+</div>
+
+
                 </div>
+
                 <div class="col-md-6 col-lg-3">
                                         <div class="card1 " >
     <div class="header1" style="background: rgb(3, 158, 41); ">
@@ -148,6 +163,15 @@
 
         <a class="btn-link">Documentation</a>
     </div>
+</div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(15, 124, 5)">96%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:96%; background: rgb(15, 124, 5);"></div>
+</div>
+
 </div>
 
                 </div>
@@ -172,6 +196,15 @@
         <a class="btn-link">Documentation</a>
     </div>
 </div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(130, 62, 240);">80%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:80%; background:rgb(130, 62, 240);"></div>
+</div>
+
+</div>
 
                 </div>
                 <div class="col-md-6 col-lg-3">
@@ -194,6 +227,15 @@
 
         <a class="btn-link">Documentation</a>
     </div>
+</div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(36, 128, 248);">100%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:100%; background: rgb(36, 128, 248);"></div>
+</div>
+
 </div>
 
                 </div>
@@ -218,6 +260,15 @@
         <a class="btn-link">Documentation</a>
     </div>
 </div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(0, 7, 219);">100%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:100%; background: rgb(0, 7, 219);"></div>
+</div>
+
+</div>
 
                 </div>
                 <div class="col-md-6 col-lg-3 mt-3">
@@ -240,6 +291,15 @@
 
         <a class="btn-link">Documentation</a>
     </div>
+</div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(241, 135, 97);">100%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:100%; background: rgb(241, 135, 97);"></div>
+</div>
+
 </div>
 
                 </div>
@@ -264,6 +324,15 @@
         <a class="btn-link">Documentation</a>
     </div>
 </div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(39, 239, 216);">90%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:90%; background: rgb(39, 239, 216);"></div>
+</div>
+
+</div>
 
                 </div>
                 <div class="col-md-6 col-lg-3 mt-3">
@@ -281,11 +350,21 @@
 
      <div class="content1">
         <p class="p1">
+            
             Wann learn more about Tailwind?
         </p>
 
         <a class="btn-link">Documentation</a>
     </div>
+</div>
+<div class="card p-3 rounded-lg">
+    <div class="flex justify-content-center">
+        <h5 style="color: rgb(62, 207, 240);">80%</h5>
+    </div>
+      <div class="progress-container">
+    <div class="progress-bar" style="width:80%; background: rgb(62, 207, 240);"></div>
+</div>
+
 </div>
 
                     <!-- <div class="service-card">
@@ -790,6 +869,53 @@ box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 .card1 .content1 .btn-link:hover {
   border-bottom: 1px solid #1d8122;
 }
+
+  .progress-bar {
+
+            background-color: #c7c7c7;
+
+            border-radius: 20px;
+
+            width: 100%;
+
+            height: 10px;
+
+            position: relative;
+
+        }
+
+
+        .progress-bar::after {
+
+            content: "";
+
+            position: absolute;
+
+
+            background-color: #490000;
+
+            border-radius: 20px;
+
+        }
+
+
+        .progress-bar span {
+
+            position: absolute;
+
+            width: 100%;
+
+            height: 100%;
+
+            text-align: center;
+
+            font-size: 12px;
+
+            line-height: 20px;
+
+            color: white;
+
+        }
     </style>
 
 </body>
