--- a/www/index.html
+++ b/www/index.html
@@ -381,7 +381,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a href="#" class="portfolio-card">
-                            <img src="imgs/folio-1.jpg" class="portfolio-card-img"
+                            <img src="imgs/spidy.png" class="portfolio-card-img"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                             <span class="portfolio-card-overlay">
                                 <span class="portfolio-card-caption">
@@ -393,23 +393,11 @@
                     </div>
                     <div class="col-md-4">
                         <a href="#" class="portfolio-card">
-                            <img class="portfolio-card-img" src="imgs/folio-2.jpg" class="img-responsive rounded"
+                            <img class="portfolio-card-img" src="imgs/kent.png" class="img-responsive rounded"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                             <span class="portfolio-card-overlay">
                                 <span class="portfolio-card-caption">
                                     <h4>Web Projects</h5>
-                                        <p class="font-weight-normal">Category: Web Templates</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="#" class="portfolio-card">
-                            <img class="portfolio-card-img" src="imgs/folio-3.jpg" class="img-responsive rounded"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                            <span class="portfolio-card-overlay">
-                                <span class="portfolio-card-caption">
-                                    <h4>Web Designing</h5>
                                         <p class="font-weight-normal">Category: Web Templates</p>
                                 </span>
                             </span>
@@ -513,7 +501,6 @@
             </div> <!-- end of container -->
         </section> <!-- end of section -->
 
-        <!-- testimonial section -->
         <section class="section" id="testmonial">
             <div class="container text-center">
                 <p class="section-subtitle">More?</p>
@@ -524,65 +511,17 @@
                     <ol style="font-weight: 600; color: rgb(104, 104, 104); text-align: start;">
                         <li>Where do i live? : I live in Bohol</li>
                         <li>How old? : I'm 22 years of age</li>
-                        <li>"Embrace the uniqueness that is Kenjey, for in the tapestry of life, your individuality is the thread that weaves a story of strength, passion, and endless possibilities. Let your journey be a testament to the extraordinary, for within you lies the power to 
-                            paint the canvas of your dreams with hues of resilience and the brushstrokes of unwavering determination."</li>
+                        <li>"Embrace the uniqueness that is Kenjey, for in the tapestry of life, your individuality is
+                            the thread that weaves a story of strength, passion, and endless possibilities. Let your
+                            journey be a testament to the extraordinary, for within you lies the power to
+                            paint the canvas of your dreams with hues of resilience and the brushstrokes of unwavering
+                            determination."</li>
 
                     </ol>
                 </div>
             </div>
         </section>
 
-        <!-- <section class="section" id="blog">
- 
-        <div class="container text-center">
-            <p class="section-subtitle">Recent Posts?</p>
-            <h6 class="section-title mb-6">Blog</h6>
-            
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <img src="imgs/img-1.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">Consectetur adipisicing elit</h6>
-
-                    <p class="blog-card-caption">
-                        <a href="#">By: Admin</a>
-                        <a href="#"><i class="ti-heart text-danger"></i> 234</a>
-                        <a href="#"><i class="ti-comment"></i> 123</a>
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet nesciunt qui sit velit delectus voluptates, repellat ipsum culpa id deleniti. Rerum debitis facilis accusantium neque numquam mollitia modi quasi distinctio.</p>
-
-                    <p><b>Necessitatibus nihil impedit! Ex nisi eveniet, dolor aliquid consequuntur repudiandae.</b></p>
-                    <p>Magnam in repellat enim harum omnis aperiam! Explicabo illo, commodi, dolor blanditiis cupiditate harum nisi vero accusamus laudantium voluptatibus dolores quae obcaecati.</p>
-
-                    <a href="#" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
-                </div>
-            </div>
-
- 
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <img src="imgs/img-2.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">Explicabo illo</h6>
-
-                    <p class="blog-card-caption">
-                        <a href="#">By: Admin</a>
-                        <a href="#"><i class="ti-heart text-danger"></i> 456</a>
-                        <a href="#"><i class="ti-comment"></i> 264</a>
-                    </p>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit excepturi laborum enim, vitae ipsam atque eum, ad iusto consequuntur voluptas, esse doloribus. Perferendis porro quisquam vitae exercitationem aliquid, minus eos laborum repudiandae, cumque debitis iusto omnis praesentium? Laborum placeat sit adipisci illum tempore maxime, esse qui quae? Molestias excepturi corporis similique doloribus. Esse vitae earum architecto nulla non dolores illum at perspiciatis quod, et deleniti cupiditate reiciendis harum facere, delectus eum commodi soluta distinctio sit repudiandae possimus sunt. Ipsum, rem.</p>
-
-                    <a href="#" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
-                </div>
-            </div>
-
-        </div>
-    </section>< -->
-
-        <!-- contact section -->
         <section class="section" id="contact">
             <div class="container text-center">
                 <p class="section-subtitle">How can you communicate?</p>
