--- a/www/index.html
+++ b/www/index.html
@@ -375,33 +375,15 @@
         <!-- portfolio section -->
         <section class="section" id="portfolio">
             <div class="container text-center reveal animation-element">
-                <p class="section-subtitle">What I Did ?</p>
+                <p class="section-subtitle">This is My Sketch in tracing in Adobe Ai Illustrator</p>
                 <h6 class="section-title mb-6">Projects</h6>
                 <!-- row -->
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="#" class="portfolio-card">
-                            <img src="imgs/spidy.png" class="portfolio-card-img"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                            <span class="portfolio-card-overlay">
-                                <span class="portfolio-card-caption">
-                                    <h4>Web Developing</h5>
-                                        <p class="font-weight-normal">Category: Web Templates</p>
-                                </span>
-                            </span>
-                        </a>
+                        <img src="imgs/spidy.png" style="width: 100%; height: 350px">
                     </div>
-                    <div class="col-md-4">
-                        <a href="#" class="portfolio-card">
-                            <img class="portfolio-card-img" src="imgs/kent.png" class="img-responsive rounded"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                            <span class="portfolio-card-overlay">
-                                <span class="portfolio-card-caption">
-                                    <h4>Web Projects</h5>
-                                        <p class="font-weight-normal">Category: Web Templates</p>
-                                </span>
-                            </span>
-                        </a>
+                    <div class=" col-md-4">
+                        <img src="imgs/kent.png" style="width: 100%;  height: 350px" alt="">
                     </div>
                 </div><!-- end of row -->
             </div><!-- end of container -->
