--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,9 @@
         <script defer src="/__/firebase/10.7.1/firebase-remote-config-compat.js"></script>
         <script defer src="/__/firebase/10.7.1/firebase-performance-compat.js"></script>
         <!-- font icons -->
-        <link rel="stylesheet" href="/vendors/themify-icons/css/themify-icons.css">
+        <link rel="stylesheet" href="/www/vendors/themify-icons/css/themify-icons.css">
         <!-- Bootstrap + Meyawo main styles -->
-        <link rel="stylesheet" href="/css/meyawo.css">
+        <link rel="stylesheet" href="/www/css/meyawo.css">
         <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -552,14 +552,14 @@
             </footer>
         </div> <!-- end of page footer -->
 
-        <script src="/vendors/jquery/jquery-3.4.1.js"></script>
-        <script src="/vendors/bootstrap/bootstrap.bundle.js"></script>
+        <script src="/www/vendors/jquery/jquery-3.4.1.js"></script>
+        <script src="/www/vendors/bootstrap/bootstrap.bundle.js"></script>
 
         <!-- bootstrap 3 affix -->
-        <script src="/vendors/bootstrap/bootstrap.affix.js"></script>
+        <script src="/www/vendors/bootstrap/bootstrap.affix.js"></script>
 
         <!-- Meyawo js -->
-        <script src="/js/meyawo.js"></script>
+        <script src="/www/js/meyawo.js"></script>
 
         <script>
             document.addEventListener('DOMContentLoaded', function () {
